# project2_Golubtsov_Valerii_M25-555

./: .gitignore  README.md  pyproject.toml
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
