[project]
name = "project2-golubtsov-valerii-m25-555"
version = "0.1.0"
description = "Проект №2 Программирование на Python. В рамках проекта была разработана простая БД"
authors = [
    {name = "Valerii Golubtsov",email = "golubcov.valera@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "prettytable (>=3.17.0,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)"
]